...
                    VStack {
                        Spacer()
                        Button(action: {
                            self.settings.startAnimationDone = true

                        }) {
                            Text("Start").foregroundColor(.clear)
                        }
                    }.onAppear {
                        // Location
                        _ = LocationPublisher.shared

                        // Photo Roll
...
